Add main wrapper to base template and update content divs for consistency

--- a/templates/about/index.html.twig
+++ b/templates/about/index.html.twig
@@ -4,7 +4,7 @@
 
 {% block body %}
 
-<div class="example-wrapper">
+<div id="content" class="example-wrapper">
     <h1>Hello {{ controller_name }}! ✅</h1>
 </div>
 {% endblock %}
