--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -33,6 +33,8 @@
             </div>
         </header>
 
+        <main id="main" >
         {% block body %}{% endblock %}
+        </main>
     </body>
 </html>
