--- a/templates/cart/index.html.twig
+++ b/templates/cart/index.html.twig
@@ -3,7 +3,7 @@
 {% block title %}Hello CartController!{% endblock %}
 
 {% block body %}
-<div class="bg-gray-50 p-6">
+<div id="content" class="bg-gray-50 p-6">
     <section class="max-w-4xl mx-auto bg-white rounded-lg shadow-lg p-6">
         <h1 class="text-3xl font-bold mb-6">Twój koszyk</h1>
 
