--- a/templates/product-details/index.html.twig
+++ b/templates/product-details/index.html.twig
@@ -4,7 +4,7 @@
 
 {% block body %}
 
-<div class="bg-gray-50 p-6">
+<div id="content" class="bg-gray-50 p-6">
 	<section class="max-w-5xl mx-auto bg-white rounded-lg shadow-lg overflow-hidden">
 		<div class="flex flex-col md:flex-row">
 			<!-- Galeria / zdjęcia -->
