--- a/templates/products/index.html.twig
+++ b/templates/products/index.html.twig
@@ -3,7 +3,7 @@
 {% block title %}Hello ProductController!{% endblock %}
 
 {% block body %}
-<div class="bg-gray-100 min-h-screen p-6">
+<div id="content" class="bg-gray-100 min-h-screen p-6">
     <div class="max-w-7xl mx-auto">
         <h1 class="text-3xl font-bold mb-8 text-center text-gray-800">Nasze Produkty</h1>
 
