Add contact page and integrate product listing in home page

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -9,6 +9,7 @@
         {% endblock %}
 
         {% block javascripts %}
+        <script type="module" src="https://cdn.jsdelivr.net/npm/@hotwired/turbo@latest/dist/turbo.es2017-esm.min.js"></script>
         {% endblock %}
     </head>
     <body>
