--- a/templates/products/index.html.twig
+++ b/templates/products/index.html.twig
@@ -1,62 +1,90 @@
 {% extends 'base.html.twig' %}
 
+
 {% block title %}Hello ProductController!{% endblock %}
 
 {% block body %}
-<div id="content" class="bg-gray-100 min-h-screen p-6">
-    <div class="max-w-7xl mx-auto">
-        <h1 class="text-3xl font-bold mb-8 text-center text-gray-800">Nasze Produkty</h1>
 
-        <div class="flex flex-col md:flex-row gap-8">
-            {# Sidebar z filtrami #}
-            <aside class="w-full md:w-1/4 bg-white p-4 rounded-lg shadow-md">
-                <h2 class="text-xl font-semibold mb-4">Filtry</h2>
-                <ul class="space-y-2 text-sky-800">
-                    </li>                    <li>
-                        <a href="/products" class="hover:underline">All</a>
-                    </li>
-                    {% for category in categories %}
-                    {% set selectedClass = app.request.get('category') == category.slug ? 'font-bold' : '' %}
-                    <li>
-                        <a href="/products?category={{ category.slug }}" class="hover:underline {{ selectedClass }}">{{ category.name }}</a>
-                    </li>
-                    {% endfor %}
-                </ul>
-            </aside>
+{#	<turbo-frame id="product_details"></turbo-frame>#}
 
-            {# Główna sekcja z produktami #}
-            <section class="w-full md:w-3/4">
-                <div class="columns-1 sm:columns-2 md:columns-3 gap-4 space-y-4">
-                    {% for product in products %}
-                        <div class="break-inside-avoid bg-white rounded-lg shadow-md overflow-hidden hover:shadow-xl transition mb-4 flex flex-col">
-                            <a class="hover:text-indigo-700" href="/product/{{ product.id }}">
-                                <img src="{{ product.thumbnail }}" alt="{{ product.title }}" class="w-full h-48 object-contain" />
-                                <div class="p-4 flex flex-col flex-grow">
-                                    <div class="flex justify-between items-center mb-3">
-                                        <h3 class="text-lg font-semibold">
-                                            {{ product.title }}
-                                        </h3>
-                                        <p class="text-indigo-600 font-bold text-xl">{{ product.price }} zł</p>
-                                    </div>
-                                    <div class="flex justify-between items-center mb-4">
-                                        <p class="text-yellow-500 font-semibold">Rating: {{ product.rating }} ★</p>
-                                        <p class="inline-block bg-red-500 text-white text-xs font-bold px-2 py-1 rounded">
-                                            Discount: {{ product.discountPercentage }}%
-                                        </p>
-                                    </div>
+	<div id="product"></div>
+
+	<div id="content" class="bg-gray-100 min-h-screen p-6">
+		<div class="max-w-7xl mx-auto">
+			<h1 class="text-3xl font-bold mb-8 text-center text-gray-800">Nasze Produkty</h1>
+
+
+			<div class="flex flex-col md:flex-row gap-8">
+				{# Sidebar z filtrami #}
+				<aside class="w-full md:w-1/4 bg-white p-4 rounded-lg shadow-md">
+					<h2 class="text-xl font-semibold mb-4">Filtry</h2>
+					<ul class="space-y-2 text-sky-800">
+						<li>
+							<a href="/products"
+							   data-turbo-frame="product_list"
+							   data-turbo-action="advance"
+							   class="hover:underline"
+							>All</a>
+						</li>
+						{% for category in categories %}
+							<li>
+								<a href="/products?category={{ category.slug }}"
+								   data-turbo-frame="product_list"
+								   data-turbo-action="advance"
+								   class="hover:underline"
+								>
+									{{ category.name }}
+								</a>
+							</li>
+						{% endfor %}
+					</ul>
+				</aside>
+
+				{# Główna sekcja z produktami #}
+				<section class="w-full md:w-3/4">
+					<div class="columns-1 sm:columns-2 md:columns-3 gap-4 space-y-4">
+                        <turbo-frame id="product_list">
+                            {% for product in products %}
+                                <div class="break-inside-avoid bg-white rounded-lg shadow-md overflow-hidden hover:shadow-xl transition mb-4 flex flex-col">
+
+                                    <a class="hover:text-indigo-700"
+                                       href="/product/{{ product.id }}"
+{#                                       data-turbo-frame="product_details"#}
+									   data-turbo-stream
+                                    >
+                                        <img src="{{ product.thumbnail }}" alt="{{ product.title }}" class="w-full h-48 object-contain"/>
+                                    </a>
+                                        <div class="p-4 flex flex-col flex-grow">
+                                            <div class="flex justify-between items-center mb-3">
+                                                <h3 class="text-lg font-semibold">
+                                                    <a class="hover:text-indigo-700"
+                                                       data-turbo-frame="_top"
+                                                       href="/product/{{ product.id }}">
+                                                    {{ product.title }}
+                                                    </a>
+                                                </h3>
+                                                <p class="text-indigo-600 font-bold text-xl">{{ product.price }} zł</p>
+                                            </div>
+                                            <div class="flex justify-between items-center mb-4">
+                                                <p class="text-yellow-500 font-semibold">Rating: {{ product.rating }} ★</p>
+                                                <p class="inline-block bg-red-500 text-white text-xs font-bold px-2 py-1 rounded">
+                                                    Discount: {{ product.discountPercentage }}%
+                                                </p>
+                                            </div>
+                                        </div>
+                                    <a href="/cart/add?productId={{ product.id }}&quantity=1"
+									   data-turbo-stream
+                                       class="mt-auto w-full text-center bg-sky-800 text-white py-2 rounded hover:bg-indigo-700 transition cursor-pointer">
+                                        Dodaj do koszyka
+                                    </a>
                                 </div>
-                            </a>
-                            <a href="/cart/add?productId={{ product.id }}&quantity=1" class="mt-auto w-full text-center bg-sky-800 text-white py-2 rounded hover:bg-indigo-700 transition cursor-pointer">
-                                Dodaj do koszyka
-                            </a>
-                        </div>
-                    {% else %}
-                        <p class="text-center text-gray-500">Brak produktów do wyświetlenia.</p>
-                    {% endfor %}
-                </div>
-            </section>
-        </div>
-    </div>
-</div>
-
+                            {% else %}
+                                <p class="text-center text-gray-500">Brak produktów do wyświetlenia.</p>
+                            {% endfor %}
+                        </turbo-frame>
+					</div>
+				</section>
+			</div>
+		</div>
+	</div>
 {% endblock %}
