Add server time endpoint to HomeController

--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -5,6 +5,11 @@
 {% block body %}
 <div id="content" class="example-wrapper">
 
+    {# HTMX clock example #}
+{#    <div hx-get="/time" hx-target="#clock" hx-swap="innerHTML" hx-trigger="every 1s" class="text-center py-4">#}
+{#        <div id="clock"></div>#}
+{#    </div>#}
+
     <!-- Hero -->
     <section class="bg-sky-800 text-white py-20">
         <div class="container mx-auto px-6 text-center max-w-3xl">
