--- a/templates/about/index.html.twig
+++ b/templates/about/index.html.twig
@@ -20,7 +20,7 @@
                 <p class="font-medium">Thank you for your message! We will get back to you soon.</p>
             </div>
             {% else %}
-            <form action="/contact" method="POST" class="space-y-6">
+            <form action="/contact" method="GET" class="space-y-6">
                 <div>
                     <label for="name" class="block text-sm font-medium text-gray-700">Name</label>
                     <input type="text" id="name" name="name" required
