--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -27,7 +27,10 @@
                     <a href="/" class="hover:text-indigo-600 transition" >Home</a>
                     <a href="/products" class="hover:text-indigo-600 transition">Produkty</a>
                     <a href="/about" class="hover:text-indigo-600 transition">O nas</a>
-                    <a href="/cart" class="hover:text-indigo-600 transition">Koszyk</a>
+                    <a href="/cart" class="hover:text-indigo-600 transition">
+                        Koszyk
+{#                        <span id="cart-count"></span>#}
+                    </a>
                 </nav>
                 <button class="md:hidden text-indigo-600 focus:outline-none">
                     <!-- ikona menu hamburger -->
