Remove commented HTMX script tag from base.html.twig

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -15,6 +15,8 @@
         {% endblock %}
 
         {% block javascripts %}
+{#        <script src="https://unpkg.com/htmx.org/dist/htmx.min.js"></script>#}
+
         <script type="module" src="https://cdn.jsdelivr.net/npm/@hotwired/turbo@latest/dist/turbo.es2017-esm.min.js"></script>
         {% endblock %}
     </head>
