Add Turbo Frame support to cart add link in index.html.twig

--- a/templates/products/index.html.twig
+++ b/templates/products/index.html.twig
@@ -73,6 +73,7 @@
                                             </div>
                                         </div>
                                     <a href="/cart/add?productId={{ product.id }}&quantity=1"
+									   data-turbo-frame="_top"
 									   data-turbo-stream
                                        class="mt-auto w-full text-center bg-sky-800 text-white py-2 rounded hover:bg-indigo-700 transition cursor-pointer">
                                         Dodaj do koszyka
