Restore cart count display in base.html.twig

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -31,7 +31,7 @@
                     <a href="/about" class="hover:text-indigo-600 transition">O nas</a>
                     <a href="/cart" class="hover:text-indigo-600 transition">
                         Koszyk
-{#                        <span id="cart-count"></span>#}
+                        <span id="cart-count"></span>
                     </a>
                 </nav>
                 <button class="md:hidden text-indigo-600 focus:outline-none">
