--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -24,7 +24,7 @@
         <!-- Nagłówek -->
         <header class="bg-white shadow-md">
             <div class="container mx-auto flex items-center justify-between py-4 px-6">
-                <a href="#" class="text-2xl font-bold text-indigo-600">MójSklep</a>
+                <a href="/" class="text-2xl font-bold text-indigo-600">MójSklep</a>
                 <nav class="space-x-6 text-gray-700 hidden md:flex">
                     <a href="/" class="hover:text-indigo-600 transition" >Home</a>
                     <a href="/products" class="hover:text-indigo-600 transition">Produkty</a>
